swagger improvements
